<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"
        android:title="@string/add"/>


    <item
        android:id="@+id/action_open"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_file_folder_open"
        android:title="@string/categories"
        app:showAsAction="always"/>


    <item android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/export"/>
    <item
        android:id="@+id/menu_import"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/importdb"/>
    <item
        android:id="@+id/menu_notify"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/notify"/>

    <item
        android:id="@+id/menu_daysdiff"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/days_diff"/>


    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_dialog_info"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never"/>




</menu>
