<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="400dp"
    android:orientation="vertical"
    android:padding="10dp" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:capitalize="sentences"
                android:imeOptions="actionDone" >
            </EditText>

            <RelativeLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/vlayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/dateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <TextView
                        android:id="@+id/ago_future"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>

                <Button
                    android:id="@+id/buttonPickDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/choose_day" />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/recurrence"
                android:textStyle="bold" />

            <com.merware.dayssincepro.SelectAgainSpinner
                android:id="@+id/recur_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/recur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />


            <CheckBox
                android:id="@+id/checkBoxEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_day" />


            <RelativeLayout
                android:id="@+id/layoutEndDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/endDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <Button
                    android:id="@+id/buttonPickEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/choose_day" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/notify_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notify_midnight" />

                <Button
                    android:id="@+id/buttonPickRecur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/choose" />
            </RelativeLayout>

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/enter_details_optional"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLength="256"
                android:maxLines="4"
                android:minLines="2" />

            <com.merware.dayssincepro.SelectAgainSpinner
                android:id="@+id/catSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/prompt" />

            <TextView
                android:id="@+id/categoryNudgeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/add_event_category_nudge"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/eventOK"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/OK" />

                <Button
                    android:id="@+id/eventCancel"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Cancel" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>