<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mini_b_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleCentered="true" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/onTime"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/onTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timesThisYear"
        android:layout_marginLeft="10dp"
        android:text="@string/percent_on_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/timesThisYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timesThisMonth"
        android:layout_marginLeft="10dp"
        android:text="@string/times_this_year"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/timesThisMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/interval"
        android:layout_marginLeft="10dp"
        android:text="@string/times_this_month"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_marginLeft="10dp"
        android:text="@string/interval"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="2dip"
        android:paddingRight="2dip"
        android:paddingTop="0dip" >

        <Button
            android:id="@+id/addButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/done" />
    </LinearLayout>

    </RelativeLayout>

</LinearLayout>